# mirador

./: .dockerignore  .env.example  .gitignore  2025-07-08-this-session-is-being-continued-from-a-previous-co.txt  2025-07-09-this-session-is-being-continued-from-a-previous-co.txt  2025-07-10-this-session-is-being-continued-from-a-previous-co.txt  2025-07-11-this-session-is-being-continued-from-a-previous-co.txt  ACTION_PLAN_WEB_DASHBOARD.md  API_ARCHITECTURE_ANALYSIS.md  BEST_PRACTICES_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  COMPLETE_WORK_INVENTORY.md  CONSOLIDATED_MODELS.md  CONTEXT_INTEGRATION_SUMMARY.md  Complete AI Ecosystem: Test, Optimize, Organize Plan.md  Comprehensive Analysis_ The Mirador AI Framework.md  DEDUPLICATION_STRATEGY.md  DEVELOPMENT_ROADMAP_2025.md  DOCUMENTATION_INDEX.md  Dockerfile  ENHANCED_PROMPT_LIBRARY.md  HUMANA_INTEGRATION_GUIDE.md  MATTHEW_INTEGRATION_GUIDE.md  MIRADOR_ACADEMIC_PAPER.md  MIRADOR_COMPREHENSIVE_REFERENCE.md  MIRADOR_DALIA_ALIGNMENT.md  MIRADOR_DEMO_SCENARIOS.md  MIRADOR_EXECUTIVE_PRESENTATION.md  MIRADOR_METRICS_DASHBOARD.md  MIRADOR_MODEL_OPTIMIZATION_STRATEGY.md  MIRADOR_POLITICAL_NAVIGATION.md  MIRADOR_REAL_WORLD_TEST_SCENARIOS.md  MIRADOR_RISK_MITIGATION.md  MIRADOR_TECHNICAL_PAPER.md  MIRADOR_USE_CASE_IMPLEMENTATION_SUMMARY.md  MIRADOR_V2_ENHANCEMENT_GUIDE.md  MIRADOR_VISUAL_DOCS.md  MODEL_CONFIGURATION_REFERENCE.md  Mirador AI Framework - Comprehensive Improvement Plan.md  (+98 more)
.claude/: PROJECT_HANDOFF.md
.github/: topics.txt
Documentation and Saved Assets/: Enhanced Ollama Model Files for M3 Max MacBook Pro.md  executive_portfolio_summary.md  humana-communication-msgs.md  humana-manager-strategy.md  linkedin-post-templates.md  linkedin_transformation_posts.md
Perplexity/: Specialized Ollama Model Files for Matthew Scott.md
archive/: 2025-07-09-caveat-the-messages-below-were-generated-by-the-u.txt  doc_index.txt
chain_backups_20250709_193417/: mirador_universal_runner_v3_optimized.sh
chain_backups_20250709_231655/: mirador_hybrid_chains.sh  mirador_rag_chain.sh  optimize_mirador_chains.sh  update_chains_consolidated.sh
code_cleanup_backup_20250709_150325/: 2025-07-08-caveat-the-messages-below-were-generated-by-the-u.txt  2025-07-08-this-session-is-being-continued-from-a-previous-co.txt  CONTEXT_INTEGRATION_SUMMARY.md  MIRADOR_COMPREHENSIVE_REFERENCE.md  MIRADOR_POLITICAL_NAVIGATION.md  MIRADOR_REAL_WORLD_TEST_SCENARIOS.md  MODEL_CONFIGURATION_REFERENCE.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  QUICK_DEMO_COMMANDS.md  README.md  RECURSIVE_ANALYSIS_SYNTHESIS.md  create_optimized_models_fixed.sh  requirements_advocates.txt
config/: model_routing_v2.yaml
conversations/: conversation_20250604_152522.txt
diagnostic_output/: model_diagnostic_report.md
docs/: ARCHITECTURE.md  CHAIN_REFERENCE.md  DOCKER.md  LOAD_TESTING.md  MIRADOR_COMPLETE_JOURNEY.md  MIRADOR_COMPLETE_SYNTHESIS.md  MODEL_GUIDE.md  MONITORING.md  PROMPT_LIBRARY.md
examples/: cache_demo.py  graphql_queries.graphql  live_rag_examples.md  quick_rag_test.sh  (+3 more)
sdk/python/: README.md  pyproject.toml  requirements.txt  setup.py
sdk/python/examples/: async_example.py  basic_usage.py  streaming_example.py
sdk/python/src/mirador/: __init__.py  async_client.py  async_resources.py  cli.py  client.py  config.py  exceptions.py  models.py  resources.py  websocket.py
(+1114 files in other folders)
